examples/test/testpolicy19330.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19330
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key24: value29
      key6: value22
      key37: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value2
          key30: value23
      podSelector:
        matchLabels:
          key13: value0
